--- a/모달창만들기/style.css
+++ b/모달창만들기/style.css
@@ -1,3 +1,7 @@
+.body.scroll_lock{
+  overflow: hidden;
+  height: 100%;
+}
 button {
   border: 0;
   outline: none;
@@ -34,7 +38,9 @@ button {
   height: 100%;
   overflow: hidden;
 }
-
+.modal.show{
+  display: block;
+}
 .modal_wrap {
   position: fixed;
   top: 50%;
